@@ -36,12 +36,14 @@ public class UpdateMenu extends BorderPane {
     ProgressBar[] progressBars = new ProgressBar[8];
     Button installAllButton;
     GraphicalMenus graphicalMenus;
+    Main main;
 
     public UpdateMenu(GraphicalMenus graphicalMenus, UpdateManager updateManager, Main main, Configuration configuration) {
         super();
 
         Translator translator = main.getTranslator();
 
+        this.main = main;
         this.updateManager = updateManager;
         this.graphicalMenus = graphicalMenus;
         for (int i = 0; i <= 7; i++) {
@@ -102,7 +104,7 @@ public class UpdateMenu extends BorderPane {
         createGnomeControlCenterButton(translator, settings, UpdateService.GAZEPLAY);
         createGnomeControlCenterButton(translator, settings, UpdateService.INTERAACTION_PLAYER);
         createGnomeControlCenterButton(translator, settings, UpdateService.INTERAACTION_GAZE);
-        if (UtilsOS.isWindows()){
+        if (UtilsOS.isUnix()){
             createGnomeControlCenterButton(translator, settings, UpdateService.INTERAACTION_INTERFACE);
         }
 
@@ -180,6 +182,7 @@ public class UpdateMenu extends BorderPane {
     }
 
     void startUpdateSystem() {
+        this.main.getSetup().closePorts();
         if (updateManager.updateServices[UpdateService.SYSTEME].getUpdateProperty().get()) {
             try {
                 ProcessBuilder pb = new ProcessBuilder("");
@@ -241,9 +244,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 2);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\augcomDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\augcomDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.AUGCOM + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.AUGCOM].getOutput().setValue("");
@@ -252,7 +257,7 @@ public class UpdateMenu extends BorderPane {
                         });
                         startUpdateInterAACtionScene();
                     });
-                    progressPercent(runtime, 2);
+                    progressPercent(p, 2);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -280,9 +285,13 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 2);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\augcomDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    this.main.getSetup().closePorts();
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\augcomDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
+                        this.main.getSetup().openPorts();
                         Platform.runLater(() -> {
                             progressBars[UpdateService.AUGCOM + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.AUGCOM].getOutput().setValue("");
@@ -290,7 +299,7 @@ public class UpdateMenu extends BorderPane {
                             updateManager.checkSpecificUpdate(updateManager.updateServices[UpdateService.AUGCOM]);
                         });
                     });
-                    progressPercent(runtime, 2);
+                    progressPercent(p, 2);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -317,9 +326,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 3);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\sceneDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\sceneDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.INTERAACTION_SCENE + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.INTERAACTION_SCENE].getOutput().setValue("");
@@ -328,7 +339,7 @@ public class UpdateMenu extends BorderPane {
                         });
                         startUpdateInterAACtionPlayer();
                     });
-                    progressPercent(runtime, 3);
+                    progressPercent(p, 3);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -356,9 +367,13 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 3);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\sceneDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    this.main.getSetup().closePorts();
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\sceneDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
+                        this.main.getSetup().openPorts();
                         Platform.runLater(() -> {
                             progressBars[UpdateService.INTERAACTION_SCENE + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.INTERAACTION_SCENE].getOutput().setValue("");
@@ -366,7 +381,7 @@ public class UpdateMenu extends BorderPane {
                             updateManager.checkSpecificUpdate(updateManager.updateServices[UpdateService.INTERAACTION_SCENE]);
                         });
                     });
-                    progressPercent(runtime, 3);
+                    progressPercent(p, 3);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -393,9 +408,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 4);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeplayDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeplayDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.GAZEPLAY + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.GAZEPLAY].getOutput().setValue("");
@@ -404,7 +421,7 @@ public class UpdateMenu extends BorderPane {
                         });
                         startUpdateInterAACtionGaze();
                     });
-                    progressPercent(runtime, 4);
+                    progressPercent(p, 4);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -432,9 +449,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 4);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeplayDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeplayDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.GAZEPLAY + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.GAZEPLAY].getOutput().setValue("");
@@ -442,7 +461,7 @@ public class UpdateMenu extends BorderPane {
                             updateManager.checkSpecificUpdate(updateManager.updateServices[UpdateService.GAZEPLAY]);
                         });
                     });
-                    progressPercent(runtime, 4);
+                    progressPercent(p, 4);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -470,9 +489,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 5);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\playerDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\playerDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.INTERAACTION_PLAYER + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.INTERAACTION_PLAYER].getOutput().setValue("");
@@ -481,7 +502,7 @@ public class UpdateMenu extends BorderPane {
                         });
                         startUpdateGazePlay();
                     });
-                    progressPercent(runtime, 5);
+                    progressPercent(p, 5);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -510,9 +531,13 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 5);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\playerDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    this.main.getSetup().closePorts();
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\playerDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
+                        this.main.getSetup().openPorts();
                         Platform.runLater(() -> {
                             progressBars[UpdateService.INTERAACTION_PLAYER + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.INTERAACTION_PLAYER].getOutput().setValue("");
@@ -520,7 +545,7 @@ public class UpdateMenu extends BorderPane {
                             updateManager.checkSpecificUpdate(updateManager.updateServices[UpdateService.INTERAACTION_PLAYER]);
                         });
                     });
-                    progressPercent(runtime, 5);
+                    progressPercent(p, 5);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -547,9 +572,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 6);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.INTERAACTION_GAZE + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.INTERAACTION_GAZE].getOutput().setValue("");
@@ -558,7 +585,7 @@ public class UpdateMenu extends BorderPane {
                         });
                         startUpdateInterAACtionInterface();
                     });
-                    progressPercent(runtime, 6);
+                    progressPercent(p, 6);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -586,9 +613,11 @@ public class UpdateMenu extends BorderPane {
                     });
                     progressPercent(p, 6);
                 }else {
-                    Process runtime = Runtime.getRuntime().exec("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeDownload.bat");
-                    runtime.onExit().thenRun(() -> {
-                        closeProcessStream(runtime);
+                    ProcessBuilder pb = new ProcessBuilder("C:\\Program Files (x86)\\InterAACtionBoxAFSR\\lib\\scriptsWindows\\gazeDownload.bat");
+                    pb.redirectErrorStream(true);
+                    Process p = pb.start();
+                    p.onExit().thenRun(() -> {
+                        closeProcessStream(p);
                         Platform.runLater(() -> {
                             progressBars[UpdateService.INTERAACTION_GAZE + 1].setVisible(false);
                             updateManager.updateServices[UpdateService.INTERAACTION_GAZE].getOutput().setValue("");
@@ -596,7 +625,7 @@ public class UpdateMenu extends BorderPane {
                             updateManager.checkSpecificUpdate(updateManager.updateServices[UpdateService.INTERAACTION_GAZE]);
                         });
                     });
-                    progressPercent(runtime, 6);
+                    progressPercent(p, 6);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace(System.err);
@@ -605,7 +634,7 @@ public class UpdateMenu extends BorderPane {
     }
 
     void startUpdateInterAACtionInterface(){
-        if (updateManager.updateServices[UpdateService.INTERAACTION_INTERFACE].getUpdateProperty().get()) {
+        if ((updateManager.updateServices[UpdateService.INTERAACTION_INTERFACE].getUpdateProperty().get()) && (UtilsOS.isUnix())) {
             try {
                 ProcessBuilder pb = new ProcessBuilder("sh", "../../Update/interAACtionBoxInterfaceUpdate.sh");
                 pb.redirectErrorStream(true);
@@ -625,6 +654,7 @@ public class UpdateMenu extends BorderPane {
         }else {
             updateManager.checkUpdates();
         }
+        this.main.getSetup().openPorts();
     }
 
     void startUpdateOnlyInterAACtionInterface(){
